# leonosaurus

./: .coveragerc  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml
contributing/: index.html
docs/: index.md
quickstart/: index.html
search/: search_index.json
src/: manage.py
src/deploydocus/: admin.py  apps.py  enums.py  factories.py  forms.py  models.py  signals.py  task.py  utils.py  views.py
src/deploydocus/fixtures/: initial_test_user.json
src/deploydocus/management/commands/: scan_report.py  sync_gitlab.py
src/deploydocus/migrations/: 0001_initial.py  0002_gitlabproject.py  0003_rename_exlude_scope_exclude_alter_scope_include.py  0004_gitlabproject_merge_method.py  0005_alter_gitlabproject_merge_method.py  0006_gitlabrule.py  0007_policy_gitlab_rules.py  0008_alter_gitlabrule_options_gitlabrule_expected.py  0009_alter_policy_gitlab_rules_alter_policy_rules.py  0010_scope_gitlab_projects.py  0011_alter_reportresult_options_and_more.py
src/deploydocus/templates/: about.html  index.html  report.html
src/deploydocus/templates/allauth/layouts/: base.html
src/leonosaurus/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: docker-compose.yml
tests/unittests/: test_models.py  test_utils.py
wip/: index.html
