[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leonosaurus"
version = "0.0.1"
dependencies = [
  "Django==5.0.2",
  "django-allauth==0.61.1",
  "psycopg2-binary==2.9.9",
  "python-gitlab==4.4.0",
]

[project.optional-dependencies]
dev = [
  "black==24.1.1",
  "celery[redis]==5.4.0",
  "django-celery-results==2.5.1",
  "django-stubs==4.2.7",
  "factory-boy==3.3.0",
  "pre-commit==3.6.1",
  "pytest-cov==4.1.0",
  "pytest-django==4.8.0",
  "pytest-random-order",
  "pytest-random-order==1.1.1",
  "pytest==8.0.0",
  "ruff==0.2.1",
]
doc = [
  "mkdocs-material==9.5.12"
]
